Added the spring security plugin

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,7 @@
 #Grails Metadata file
-#Mon Oct 01 11:38:03 CEST 2012
+#Sat Oct 06 21:02:39 CEST 2012
 app.grails.version=2.1.1
 app.name=game
 app.servlet.version=2.5
 app.version=0.1
+plugins.spring-security-core=1.2.7.3
