--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,8 @@
 #Grails Metadata file
-#Sat Oct 06 21:02:39 CEST 2012
+#Sat Oct 13 18:21:15 CEST 2012
 app.grails.version=2.1.1
 app.name=game
 app.servlet.version=2.5
 app.version=0.1
+plugins.quartz2=0.2.3
 plugins.spring-security-core=1.2.7.3
